public/stylesheets/app.css
.jumbotron-show {
    font-family: 'Source Sans Pro', sans-serif;
}

.navbar {
	background: rgba(255,255,255,0.8);
}

body {
	font-family: 'Playfair Display', serif;
}



.jumbotron-show {
	margin-left: 2em;
	margin-right: 2em;
	text-align: center;
	background: none;
}

.jumbotron-landing {
    background: none;
    text-align: center;
}


.jumbotron p {
    margin-bottom: .7em;
}


.search {
    display: flex;
    justify-content: center;
}

.search-book {
    text-align: center;
}

#search-input {
    max-width: 30em;
}

.search-wrap {
	text-align: center;
}

.search-input-wrap {
	margin-bottom: 1em;
	display: flex;
	flex-flow: column wrap;
	align-items: center;
}

#search-button {
    margin-bottom: 1em;
}

.main-content {
	padding: 5%;
	flex: 1 1 80%;
}

.collage {
	display: grid;
	grid-template-columns: repeat(5, 1fr);
	grid-auto-rows: 210px;
	grid-gap: .5%;
	height: 100%;
}

.item {
	background-color: #D3D3D3;
	display: flex;
	justify-content: center;
	align-items: center;
	background-size: cover;
	margin-bottom: .5%;
}

.item.sq {
	grid-row: span 1;
	grid-column: span 1;
}

.item.lg-sq {
	grid-row: span 2;
	grid-column: span 2;
}

.book-content, .book-description {
	padding: 1em;
}

.book-cover {
   border:1px solid black;
   border-radius: 5%;
}

.book-content {
	text-align: center;
}

.book-title {
	font-size: 1.25em;
}

.book-authors {
	font-style: italic;
}

.card-img-top {
	width: 100%;
	min-width: 130px;
	max-width: 70%;
	display: block;
    margin: 3% auto;
}

.add-book-btn {
	display: block;
}

.book-content > p {
	color: white;
	margin-bottom: .1em;
}

.book-description {
	display: none;
}

.item:hover{	
	cursor: pointer;
}

.item:hover .book-content {
	display: none;
}

.item:hover .book-description {
	transition: visibility 0s, opacity 0.5s linear;
	display: inline-block;
	
}

.book-description {
	color: white;
	text-align: center;
}

.sq .book-description {
	font-size: .8em;
}

.underline {
	text-decoration: underline;
}

.fa-goodreads{
	color: #553b08;
}

.fa-google{
	color: #4285f4;
	margin-left: .8em;
	margin-bottom: .5em;
}

.review-wrap {
	margin-bottom: 1em;
	font-family: 'Source Sans Pro', sans-serif;
	font-style: italic;
}

.btn-warning {
	margin-bottom: .5em;
}

.img-show {
	margin-bottom: 1em;
}

#add-comment {
	margin-bottom: 1em;
}

.edit-delete {
	display: inline-block;
}

form {
	display: inline-block;
}

#edit-button {
		margin-bottom: 0;
}

.flash {
	margin: .5em auto;
}

.jumbotron-show .align-right {
	text-align: right;
}

.container-register-login {
	text-align: center;
}

.password-input {
	margin-bottom: 1em;
}

.edit-wrap {
	text-align: center;
}

.edit-wrap form{
	width: 20em;
}

.form-field {
	margin-bottom: .5em;
}

.carouselExampleSlidesOnly {
	height: 100vh;
}

.date-added {
	color: #717567;
}

.comment-wrap {
	margin-bottom: 1em;
}


@media (max-width: 576px) {
	.collage {
	display: grid;
	grid-template-columns: 1fr;
	grid-auto-rows: 20em;
	grid-gap: .5%;
	height: 100%;
}

.item {
	background-color: #D3D3D3;
	display: flex;
	justify-content: center;
	align-items: center;
	background-size: cover;
	margin-bottom: .5%;
}

.item.sq {
	grid-row: span 1;
	grid-column: span 1;
}

.item.lg-sq {
	grid-row: span 1;
	grid-column: span 1;
}

}


@media (min-width: 576px) and (max-width: 992px) {
	.collage {
	display: grid;
	grid-template-columns: repeat(4, 1fr);
	grid-auto-rows: 1fr;
	grid-gap: .5%;
	height: 100%;
}

.item {
	background-color: #D3D3D3;
	display: flex;
	justify-content: center;
	align-items: center;
	background-size: cover;
	margin-bottom: .5%;
}

.item.sq {
	grid-row: span 1;
	grid-column: span 1;
}

.item.lg-sq {
	grid-row: span 2;
	grid-column: span 2;
}
}

